webscraper/ipad-spider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipad-spider
  namespace: webscraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipad-spider
  template:
    metadata:
      labels:
        app: ipad-spider
    spec:
      containers:
        - name: ipad-spider
          # image: webscraper:v1
          image: gcr.io/webscraper-gke/webscraper:v1

          command: ["scrapy", "crawl", "ipad_spider"]
