webscraper/iphone-spider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iphone-spider
  namespace: webscraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iphone-spider
  template:
    metadata:
      labels:
        app: iphone-spider
    spec:
      containers:
        - name: iphone-spider
          image: webscraper:v1
          command: ["scrapy", "crawl", "iphone_spider"]
