webscraper/mac-spider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mac-spider
  namespace: webscraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mac-spider
  template:
    metadata:
      labels:
        app: mac-spider
    spec:
      containers:
        - name: mac-spider
          # image: webscraper:v1
          image: gcr.io/webscraper-gke/webscraper:v1

          command: ["scrapy", "crawl", "mac_spider"]
