webscraper/macbook-spider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: macbook-spider
  namespace: webscraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: macbook-spider
  template:
    metadata:
      labels:
        app: macbook-spider
    spec:
      containers:
        - name: macbook-spider
          image: webscraper:v1
          command: ["scrapy", "crawl", "macbook_spider"]
