webscraper/watch-spider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-spider
  namespace: webscraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watch-spider
  template:
    metadata:
      labels:
        app: watch-spider
    spec:
      containers:
        - name: watch-spider
          image: webscraper:v1
          command: ["scrapy", "crawl", "iwatch_spider"]
