webscraper/dynamodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb
  namespace: webscraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
        - name: dynamodb
          image: amazon/dynamodb-local
          command: ["java", "-jar", "DynamoDBLocal.jar", "-sharedDb"]
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
  namespace: webscraper
spec:
  selector:
    app: dynamodb
  ports:
    - port: 8000
      targetPort: 8000
